login page overflow hidden to stop mobile scroll

--- a/staticfiles/newcss/tasks.css
+++ b/staticfiles/newcss/tasks.css
@@ -1,7 +1,7 @@
 body {
     background-color: #BFC1C2;
-    overflow: hidden;
-    position: relative;
+    /*overflow: hidden;
+    position: relative;*/
 }
 
 hr {
